--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 
     implementation "androidx.fragment:fragment:1.3.5"
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
