--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.benatt.passwordsmanager">
+    package="com.benatt.passwordmanager">
 
     <application
         android:allowBackup="true"
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name="com.benatt.passwordsmanager.MainApp">
-        <activity android:name="com.benatt.passwordsmanager.views.MainActivity">
+        android:name="com.benatt.passwordmanager.MainApp">
+        <activity android:name="com.benatt.passwordmanager.views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
