--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name="com.benatt.passwordsmanager.MainApp">
-        <activity android:name="com.benatt.passwordsmanager.views.MainActivity">
+        <activity android:name="com.benatt.passwordsmanager.views.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
