--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,13 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
+
+    // QR Code Gen
+    implementation 'com.github.kenglxn.QRGen:android:3.0.1'
+
+    // ML Kit
+    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+
+    // ZXing
+    implementation 'com.google.zxing:core:3.2.0'
 }
