--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.benatt.passwordsmanager"
         minSdkVersion 23
         targetSdkVersion 32
-        versionCode 12
-        versionName "2.3.0"
+        versionCode 14
+        versionName "2.3.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
@@ -97,4 +97,10 @@ dependencies {
 
     // ZXing
     implementation 'com.google.zxing:core:3.2.0'
+
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.11.0'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.5.1'
 }
