--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,9 +88,11 @@ dependencies {
 
     implementation 'com.google.http-client:google-http-client-gson:1.26.0'
 
+    // Firebase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-database'
 
     // ML Kit
     implementation 'com.google.mlkit:barcode-scanning:17.0.3'
