--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.benatt.passwordsmanager"
         minSdkVersion 24
         targetSdkVersion 33
-        versionCode 19
-        versionName "2.3.7"
+        versionCode 20
+        versionName "3.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
@@ -39,68 +39,72 @@ android {
             exclude group: "com.fasterxml.jackson.core", module: "jackson-core"
         }
     }
-
     packagingOptions {
-        exclude "META-INF/DEPENDENCIES"
+        resources {
+            excludes += ['META-INF/DEPENDENCIES']
+        }
     }
+
+    namespace 'com.benatt.passwordsmanager'
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
-    implementation "com.google.android.material:material:1.4.0"
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment:2.6.0'
+    implementation 'androidx.navigation:navigation-ui:2.6.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation "com.google.android.material:material:1.9.0"
 
     // Dagger
     implementation 'com.google.dagger:dagger:2.35.1'
     androidTestImplementation "com.google.dagger:hilt-android-testing:2.29-alpha"
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.31.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.35.1'
 
     // Room
-    implementation 'androidx.room:room-runtime:2.3.0'
-    implementation 'androidx.room:room-rxjava2:2.3.0'
-    annotationProcessor 'androidx.room:room-compiler:2.3.0'
+    implementation 'androidx.room:room-runtime:2.5.2'
+    implementation 'androidx.room:room-rxjava2:2.5.2'
+    annotationProcessor 'androidx.room:room-compiler:2.5.2'
 
     // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 
-    implementation "androidx.fragment:fragment:1.3.5"
+    implementation "androidx.fragment:fragment:1.6.0"
 
     // Gson
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
-    implementation 'com.google.android.gms:play-services-auth:20.2.0'
-    implementation ('com.google.apis:google-api-services-drive:v3-rev136-1.25.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
-    implementation ('com.google.api-client:google-api-client-android:1.26.0')
-            {
-                exclude group: 'org.apache.httpcomponets'
-            }
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+    implementation ('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+        exclude group: 'org.apache.httpcomponets'
+    }
 
-    implementation 'com.google.http-client:google-http-client-gson:1.26.0'
+    implementation ('com.google.api-client:google-api-client-android:1.26.0') {
+        exclude group: 'org.apache.httpcomponets'
+    }
+
+    implementation 'com.google.http-client:google-http-client-gson:1.42.2'
 
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics'
 
     // ML Kit
-    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+    implementation 'com.google.mlkit:barcode-scanning:17.1.0'
 
     // ZXing
-    implementation 'com.google.zxing:core:3.2.0'
+    implementation 'com.google.zxing:core:3.4.0'
 
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.11.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.6.1'
 }
