--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,12 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "30.0.3"
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.benatt.passwordsmanager"
         minSdkVersion 24
-        targetSdkVersion 33
+        targetSdk 34
         versionCode 20
         versionName "3.0.0"
 
