--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -3,8 +3,7 @@ name: Android CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ develop ]
+    tags: [ 'v*.*.*' ]
 
 jobs:
   build:
@@ -12,9 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
     - name: set up JDK 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -22,7 +23,9 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
       run: ./gradlew build
+
     - name: Test with Gradle
       run: ./gradlew test
