--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Create a Location Properties File
+      run: echo "key_alias=${{ secrets.KEY_ALIAS }}\nprev_key_alias=${{ secrets.PREV_KEY_ALIAS }}\nmigrating_version=4.0.0" | tee local.properties
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
