--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Create a Location Properties File
-      run: echo "key_alias=${{ secrets.KEY_ALIAS }}\nprev_key_alias=${{ secrets.PREV_KEY_ALIAS }}\nmigrating_version=4.0.0" | tee local.properties
+      run: echo "key_alias=${{ secrets.KEY_ALIAS }}\nprev_key_alias=${{ secrets.PREV_KEY_ALIAS }}\nmigrating_version=4.0.0" >> local.properties
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
