--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,7 +18,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Create a Location Properties File
-      run: echo "key_alias=$key_alias\nprev_key_alias=$prev_key_alias\nmigrating_version=$migrating_version" >> local.properties
+      run: |
+        echo "key_alias=$key_alias\nprev_key_alias=$prev_key_alias\nmigrating_version=$migrating_version" >> local.properties
+        cat local.properties
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -36,7 +38,7 @@ jobs:
         gradle-home-cache-cleanup: true
 
     - name: Build Release with Gradle
-      run: ./gradlew bundleRelease
+      run: ./gradlew bundleRelease --info
 
     - name: Sign AAB
       id: sign
