--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,8 +5,8 @@ on:
     tags: [ 'v*.*.*' ]
 
 env:
-  key_alias: ${{ secrets.KEY_ALIAS }}
-  prev_key_alias: ${{ secrets.PREV_KEY_ALIAS }}
+  key_alias: ${{ env.ALIAS }}
+  prev_key_alias: ${{ env.PREV_KEY_ALIAS }}
   migrating_version: 4.0.0
 jobs:
   build:
@@ -18,9 +18,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Create a Location Properties File
-      run: |
-        echo "key_alias=$key_alias\nprev_key_alias=$prev_key_alias\nmigrating_version=$migrating_version" >> local.properties
-        cat local.properties
+      run: printf "key_alias=$key_alias\nprev_key_alias=$prev_key_alias\nmigrating_version=$migrating_version" >> local.properties
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
