--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,11 +4,6 @@ on:
   push:
     tags: [ 'v*.*.*' ]
 
-env:
-  key_alias: ${{ vars.ALIAS }}
-  prev_key_alias: ${{ vars.PREV_KEY_ALIAS }}
-  migrating_version: 4.0.0
-
 jobs:
   build:
     name: Build & Sign AAB
@@ -19,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Create a Location Properties File
-      run: printf "key_alias=$key_alias\nprev_key_alias=$prev_key_alias\nmigrating_version=$migrating_version" >> local.properties
+      run: printf "key_alias=${{ secrets.KEY_ALIAS }}\nprev_key_alias=${{ secrets.PREV_KEY_ALIAS }}\nmigrating_version=4.0.0" >> local.properties
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -37,7 +32,7 @@ jobs:
         gradle-home-cache-cleanup: true
 
     - name: Build Release with Gradle
-      run: ./gradlew bundleRelease --info
+      run: ./gradlew bundleRelease
 
     - name: Sign AAB
       id: sign
