--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,8 +13,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Set up environment variable
+      run: |
+        echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
+        echo "PREV_KEY_ALIAS=${{ secrets.PREV_KEY_ALIAS }}" >> $GITHUB_ENV
+
     - name: Create a Location Properties File
-      run: printf "key_alias=${{ secrets.KEY_ALIAS }}\nprev_key_alias=${{ secrets.PREV_KEY_ALIAS }}\nmigrating_version=4.0.0" >> local.properties
+      run: |
+        printf "key_alias=$KEY_ALIAS\nprev_key_alias=$PREV_KEY_ALIAS\nmigrating_version=4.0.0" >> local.properties
+        cat local.properties
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -52,21 +59,21 @@ jobs:
 
     - run: echo Build status report=${{ job.status }}
 
-  deploy:
-    name: Deploy AAB to Play Store
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download AAB
-        uses: actions/download-artifact@v4
-        with:
-          name: app-bundle
-
-      - name: Publish to Play Store
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJsonPlainText: '${{ secrets.SERVICE_ACCOUNT_JSON }}'
-          packageName: com.benatt.passwordsmanager
-          releaseFiles: '${{ github.workspace }}/app-release.aab'
-          track: production
+#  deploy:
+#    name: Deploy AAB to Play Store
+#    needs: build
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Download AAB
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: app-bundle
+#
+#      - name: Publish to Play Store
+#        uses: r0adkll/upload-google-play@v1
+#        with:
+#          serviceAccountJsonPlainText: '${{ secrets.SERVICE_ACCOUNT_JSON }}'
+#          packageName: com.benatt.passwordsmanager
+#          releaseFiles: '${{ github.workspace }}/app-release.aab'
+#          track: production
