--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -59,21 +59,21 @@ jobs:
 
     - run: echo Build status report=${{ job.status }}
 
-#  deploy:
-#    name: Deploy AAB to Play Store
-#    needs: build
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Download AAB
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: app-bundle
-#
-#      - name: Publish to Play Store
-#        uses: r0adkll/upload-google-play@v1
-#        with:
-#          serviceAccountJsonPlainText: '${{ secrets.SERVICE_ACCOUNT_JSON }}'
-#          packageName: com.benatt.passwordsmanager
-#          releaseFiles: '${{ github.workspace }}/app-release.aab'
-#          track: production
+  deploy:
+    name: Deploy AAB to Play Store
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download AAB
+        uses: actions/download-artifact@v4
+        with:
+          name: app-bundle
+
+      - name: Publish to Play Store
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJsonPlainText: '${{ secrets.SERVICE_ACCOUNT_JSON }}'
+          packageName: com.benatt.passwordsmanager
+          releaseFiles: '${{ github.workspace }}/app-release.aab'
+          track: qa
