--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -76,4 +76,4 @@ jobs:
           serviceAccountJsonPlainText: '${{ secrets.SERVICE_ACCOUNT_JSON }}'
           packageName: com.benatt.passwordsmanager
           releaseFiles: '${{ github.workspace }}/app-release.aab'
-          track: qa
+          track: internal
