--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,8 +20,7 @@ jobs:
 
     - name: Create a Location Properties File
       run: |
-        printf "key_alias=$KEY_ALIAS\nprev_key_alias=$PREV_KEY_ALIAS\nmigrating_version=4.0.2" >> local.properties
-        cat local.properties
+        printf "key_alias=$KEY_ALIAS\nprev_key_alias=$PREV_KEY_ALIAS\nmigrating_version=4.0.3" >> local.properties
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -76,4 +75,4 @@ jobs:
           serviceAccountJsonPlainText: '${{ secrets.SERVICE_ACCOUNT_JSON }}'
           packageName: com.benatt.passwordsmanager
           releaseFiles: '${{ github.workspace }}/app-release.aab'
-          track: internal
+          track: production
