--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -20,6 +20,15 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Set up environment variable
+      run: |
+        echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
+        echo "PREV_KEY_ALIAS=${{ secrets.PREV_KEY_ALIAS }}" >> $GITHUB_ENV
+
+    - name: Create a Location Properties File
+      run: |
+        printf "key_alias=$KEY_ALIAS\nprev_key_alias=$PREV_KEY_ALIAS\nmigrating_version=4.0.3" >> local.properties
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
