adds billing library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,4 +128,7 @@ dependencies {
 
     // Preferences
     implementation(libs.preferences)
+
+    // Billing
+    implementation(libs.billing)
 }
