--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ googleApiClientAndroid = "1.26.0"
 googleHttpGson = "1.42.2"
 ksp = "1.9.0-1.0.13"
 preference = "1.2.1"
+billing = "7.1.1"
 
 [libraries]
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
@@ -64,6 +65,7 @@ google-http-client-gson = { group = "com.google.http-client", name = "google-htt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "daggerHilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "daggerHilt" }
 preferences = { group = "androidx.preference", name = "preference", version.ref = "preference"}
+billing = { group = "com.android.billingclient", name = "billing", version.ref = "billing"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
