--- a/.github/workflows/deployment_alpha.yml
+++ b/.github/workflows/deployment_alpha.yml
@@ -2,7 +2,7 @@ name: Android CD
 
 on:
   push:
-    tags: [ 'v*.*.*-alpha*' ]
+    tags: [ 'v[0-9]+.[0-9]+.[0-9]+-alpha[0-9]+' ]
 
 jobs:
   build:
