--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,8 @@ googleHttpGson = "1.42.2"
 ksp = "1.9.0-1.0.13"
 preference = "1.2.1"
 billing = "7.1.1"
+credentials = "1.3.0"
+googleId = "1.1.1"
 
 [libraries]
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
@@ -66,6 +68,9 @@ hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "daggerHilt" }
 preferences = { group = "androidx.preference", name = "preference", version.ref = "preference"}
 billing = { group = "com.android.billingclient", name = "billing", version.ref = "billing"}
+credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
+credentials-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
+googleId = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleId"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
