--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,12 +119,6 @@ dependencies {
     implementation(libs.firebase.analytics)
     implementation(libs.firebase.crashlytics)
 
-    // ML Kit
-    implementation(libs.mlkit.barcode.scanning)
-
-    // Zxing
-    implementation(libs.zxing.core)
-
     implementation(libs.google.auth.oauth2.http)
 
     implementation(libs.androidx.lifecycle.extensions)
@@ -136,4 +130,7 @@ dependencies {
 
     // Billing
     implementation(libs.billing)
+
+    // Flex Layout
+    implementation libs.flexbox
 }
