--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.benatt.passwordsmanager"
         minSdkVersion 24
         targetSdk 35
-        versionCode 31
-        versionName "5.0.0-alpha"
+        versionCode 32
+        versionName "5.0.0-alpha2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
