--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "com.benatt.passwordsmanager"
         minSdkVersion 24
         targetSdk 35
-        versionCode 34
-        versionName "5.0.0-alpha4"
+        versionCode 35
+        versionName "5.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
