--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,9 @@
 [versions]
 androidGradlePlugin = "8.10.0"
 flexbox = "3.0.0"
-kotlinPlugin = "1.9.0"
 firebasePlugin = "2.9.6"
 googleServicesPlugin = "4.3.15"
 firebase = "30.1.0"
-kotlin = "1.8.0"
 appCompat = "1.6.1"
 constraintLayout = "2.1.4"
 navigation = "2.6.0"
@@ -16,7 +14,7 @@ junit = "4.13.2"
 androidxJunit = "1.1.5"
 espresso = "3.5.1"
 material = "1.9.0"
-daggerHilt = "2.49"
+daggerHilt = "2.47"
 room = "2.5.2"
 rxAndroid = "2.1.1"
 rxJava = "2.2.9"
@@ -27,11 +25,11 @@ playServicesAuth = "20.5.0"
 googleApiDrive = "v3-rev136-1.25.0"
 googleApiClientAndroid = "1.26.0"
 googleHttpGson = "1.42.2"
-ksp = "1.9.0-1.0.13"
 preference = "1.2.1"
 billing = "7.1.1"
 credentials = "1.3.0"
 googleId = "1.1.1"
+guava = "33.4.8-jre"
 
 [libraries]
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase" }
@@ -41,8 +39,8 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintLayout" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation" }
-androidx-corektx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-core = { group = "androidx.core", name = "core", version.ref = "coreKtx" }
+androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "lifecycle" }
 androidx-lifecycle-extensions = { group = "androidx.lifecycle", name = "lifecycle-extensions", version.ref = "lifecycleExtensions" }
 androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime", version.ref = "lifecycle" }
 flexbox = { module = "com.google.android.flexbox:flexbox", version.ref = "flexbox" }
@@ -69,12 +67,11 @@ billing = { group = "com.android.billingclient", name = "billing", version.ref =
 credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
 credentials-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
 googleId = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleId"}
+guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
-kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinPlugin" }
 firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebasePlugin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleServicesPlugin" }
-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
+android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
