updates billing manager

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,20 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
 
+    signingConfigs {
+        release {
+            storeFile = file(localProperties.getProperty("storeFile"))
+            storePassword = localProperties.getProperty("storePassword")
+            keyAlias = localProperties.getProperty("keyAlias")
+            keyPassword = localProperties.getProperty("storePassword")
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
+            debuggable true
+            signingConfig = signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 
             buildConfigField "String", "ALIAS", "\"${localProperties["key_alias"] ?: ""}\""
