--- a/.github/workflows/core_deployments.yml
+++ b/.github/workflows/core_deployments.yml
@@ -1,52 +1,13 @@
-name: Android CD
+name: Publish Core Library
 
 on:
   push:
     tags: [ 'v[0-9]+.[0-9]+.[0-9]+_core' ]
 
 jobs:
-  check_tag:
-    runs-on: ubuntu-latest
-    outputs:
-      # Define an output variable that the next job will use in its 'if' condition.
-      match_status: ${{ steps.regex_check.outputs.is_valid }}
-
-    steps:
-      - name: Get Tag Name
-        id: get_tag
-        # The tag name is automatically available as github.ref_name
-        run: echo "TAG_NAME=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-
-      - name: Perform Regex Check
-        id: regex_check
-        # We use Bash's native =~ operator for true Regular Expression matching.
-        run: |
-          TAG_NAME="${{ steps.get_tag.outputs.TAG_NAME }}"
-
-          # --- REGEX PATTERN ---
-          # This pattern matches tags like v1.0.0, v2.5.12, but NOT v1.0.0-beta or just 1.0.0.
-          # Pattern: ^v[0-9]+\.[0-9]+\.[0-9]+_core$
-          # Note: Double backslashes are used for escaping the dot in shell scripts.
-          REGEX_PATTERN="^v[0-9]+\\.[0-9]+\\.[0-9]+_core$"
-          # ---------------------
-
-          echo "Checking tag: $TAG_NAME against pattern: $REGEX_PATTERN"
-
-          if [[ "$TAG_NAME" =~ $REGEX_PATTERN ]]; then
-            echo "::notice title=Regex Match::Tag is a valid release candidate."
-            echo "is_valid=true" >> $GITHUB_OUTPUT
-          else
-            echo "::warning title=Regex Mismatch::Tag does NOT match the required pattern. Skipping release job."
-            echo "is_valid=false" >> $GITHUB_OUTPUT
-          fi
-
   core-deploy:
-    name: Build & Sign AAB
+    name: Publish to Github Packages
     runs-on: ubuntu-latest
-    needs: check_tag
-
-    # CRITICAL: The job will be skipped if the condition is not met.
-    if: needs.check_tag.outputs.match_status == 'true'
 
     steps:
       - name: Checkout repository
@@ -68,7 +29,7 @@ jobs:
           gradle-home-cache-cleanup: true
 
       - name: Build Release with Gradle
-        run: ./gradlew clean core:assembleRelease
+        run: ./gradlew core:clean core:assembleRelease
 
       - name: Build Release with Gradle
         run: ./gradlew publish
