--- a/.github/workflows/core_deployments.yml
+++ b/.github/workflows/core_deployments.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up environment variable
+        run: |
+          echo "PAT=${{ secrets.PAT }}" >> $GITHUB_ENV
+
+      - name: Create a Location Properties File
+        run: |
+          printf "GPR_USER=${{ github.actor }}\nGPR_KEY=$PAT" >> local.properties
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
