fixes error in actions scripts

--- a/.github/workflows/core_deployments.yml
+++ b/.github/workflows/core_deployments.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build Release with Gradle
         run: ./gradlew core:assembleRelease
 
-      - name: Build Release with Gradle
+      - name: Publish Build
         run: ./gradlew publish
 
       - run: echo Build status report=${{ job.status }}
